Assume UTC everywhere and show it in UI

--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -46,12 +46,12 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Observation began:</td>
+                    <td>Observation began (UTC):</td>
                     <td>{{ metadata.date_beg }}</td>
                 </tr>
 
                 <tr>
-                    <td>Observation ended:</td>
+                    <td>Observation ended (UTC):</td>
                     <td>{{ metadata.date_end }}</td>
                 </tr>
 
