--- a/frontend/templates/frontend/data_cube_detail/r0_graph.html
+++ b/frontend/templates/frontend/data_cube_detail/r0_graph.html
@@ -88,7 +88,7 @@ window.addEventListener('load', function() {
       xaxis: {
         type: 'datetime',
         title: {
-          text: 'Time',
+          text: 'Time (UTC)',
           style: {
               fontSize: '12px',
               fontFamily: 'Helvetica, Arial, sans-serif',
