--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -26,7 +26,7 @@
             <th scope="col" class="text-center" style="width: 4em">Spectral Line(s)</th>
             <th scope="col" class="text-center" style="width: 9em">Spectral Line Profile</th>
             <th scope="col" class="text-center" style="width: 7em">Instrument</th>
-            <th scope="col" class="text-center" style="width: 12em">Time of Observation</th>
+            <th scope="col" class="text-center" style="width: 12em">Time of Observation (UTC)</th>
             {% for column_name in additional_column_names %}
                 <th scope="col" class="text-center" style="width: 4em">{{ column_name }}</th>
             {% endfor %}
