Preserve GET parameters through the paginator

--- a/frontend/templates/frontend/search_results.html
+++ b/frontend/templates/frontend/search_results.html
@@ -80,7 +80,7 @@
         </tbody>
     </table>
 
-    {% pagination_controls paginator page_obj %}
+    {% pagination_controls request paginator page_obj %}
 
 </div>
 {% endblock %}
