--- a/frontend/templates/frontend/observation_detail.html
+++ b/frontend/templates/frontend/observation_detail.html
@@ -33,6 +33,8 @@
                 <img src="{{data_cube.previews.full_size.url}}" />
                 {% endif %}
             </figure>
+            {% else %}
+            <img style="border-radius: 5px; max-width: 100%" src="{% static 'frontend/default-thumbnail.png' %}"/>
             {% endif %}
         </div>
 
@@ -44,31 +46,43 @@
                         {% for tag in data_cube.tags.all %}
                         <span class="badge bg-info">{{ tag }}</span>
                         {% empty %}
-                        -
+                        &mdash;
                         {% endfor %}
                     </td>
                 </tr>
                 <tr>
                     <td>Observation time (UTC):</td>
                     <td>
-                        <p>Started {{ metadata.date_beg }}</p>
-                        <p>Ended {{ metadata.date_end }}.</p>
-                        <p>Total duration: {{ metadata.date_end|timeuntil:metadata.date_beg }}</p>
+                        <p>Started {{ date_beg }}</p>
+                        <p>Ended {{ date_end }}.</p>
+                        <p>Total duration: {{ date_end|timeuntil:date_beg }}</p>
                     </td>
                 </tr>
 
                 <tr>
                     <td>Instrument:</td>
-                    <td>{{ data_cube.instrument.name }}</td>
+                    <td>
+                        <ul style="list-style-type: none; padding-left: 0">
+                        {% for instrument in instruments %}
+                            <li>{{ instrument }}</li>
+                        {% endfor %}
+                        </ul>
+                    </td>
                 </tr>
                 <tr>
-                    <td>Spectral line:</td>
-                    <td>{{ metadata.filter1 }} Å ({{ metadata.waveband }})</td>
+                    <td>Spectral line(s):</td>
+                    <td>
+                        <ul style="list-style-type: none; padding-left: 0">
+                        {% for line in spectral_lines %}
+                            <li>{{ line }}</li>
+                        {% endfor %}
+                        </ul>
+                    </td>
                 </tr>
 
                 <tr>
                     <td>Scans:</td>
-                    <td>{{ metadata.naxis5 }}</td>
+                    <td>{{ total_number_of_scans }}</td>
                 </tr>
 
                 <tr>
@@ -78,13 +92,19 @@
 
                 <tr>
                     <td>Average cadence</td>
-                    <td>{{ metadata.cadavg }} seconds</td>
+                    <td>
+                        {% if metadata.cadavg %}
+                        {{ metadata.cadavg }} seconds
+                        {% else %}
+                        &mdash;
+                        {% endif %}
+                    </td>
                 </tr>
 
                 <tr>
                     <td>FITS Cube(s):</td>
                     <td style="vertical-align: middle">
-                        {% if data_cube_count > 1 %}
+                        {% if is_data_cube_group %}
                         <form action="{% url 'download_multiple_data_cubes' %}">
                             {{ download_form.as_p }}
                             <button class="btn btn-primary" type="submit"><i class="bi bi-download"></i> Download selected</button>
@@ -120,6 +140,9 @@
             <h2 class="accordion-header" id="flush-headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                   All FITS Metadata
+                  {% if is_data_cube_group %}
+                  ({{ metadata.filename }})
+                  {% endif %}
               </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#metadata-accordion">
