--- a/frontend/templates/frontend/account_profile.html
+++ b/frontend/templates/frontend/account_profile.html
@@ -13,8 +13,8 @@
                 <td>{{ user.email }}</td>
             </tr>
             <tr>
-                <td>Registered as Swedish Citizen:</td>
-                <td>{{ swedish_citizen }}</td>
+                <td>Registered as a Swedish user:</td>
+                <td>{{ swedish_user }}</td>
             </tr>
         </table>
 
