Add email re-verification feature
This will force users to re-verify their e-mail addresses
periodically to ensure that they are still active and
accessible by the user that registered it. Current
re-verification period is 12 weeks. Can be tweaked.

--- a/frontend/templates/account/verification_sent.html
+++ b/frontend/templates/account/verification_sent.html
@@ -3,12 +3,15 @@
 {% block full_width_content %}
 <div class="container col-6">
 
-    <h2>Verify Your E-mail Address</h2>
+    <h2>Please Verify Your E-mail Address</h2>
 
     <div class="container mt-5">
 
-        <p>We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please
-            contact us if you do not receive it within a few minutes.</p>
+        <p>We recurrently verify email accounts to ensure that new users have a working email address and that
+            existing users are still active.</p>
+
+        <p>We have sent an e-mail to you for verification. Follow the link provided to finalize verification
+            process. Please contact us if you do not receive it within a few minutes.</p>
     </div>
 </div>
 {% endblock %}
