--- a/frontend/templates/frontend/data_cube_detail.html
+++ b/frontend/templates/frontend/data_cube_detail.html
@@ -64,6 +64,13 @@
                 </tr>
 
                 <tr>
+                    <td>Observer(s):</td>
+                    <td>
+                        {{ metadata.observer }}
+                    </td>
+                </tr>
+
+                <tr>
                     <td>Scans:</td>
                     <td>{{ metadata.naxis5 }}</td>
                 </tr>
