Improve templates and look and feel

--- a/frontend/templates/account/password_reset.html
+++ b/frontend/templates/account/password_reset.html
@@ -3,7 +3,7 @@
 {% load account %}
 
 {% block full_width_content %}
-<div class="container col-6">
+<div class="container col-5 mt-5 mb-5">
 
     <h2>Password Reset</h2>
 
