--- a/frontend/templates/frontend/observation_detail.html
+++ b/frontend/templates/frontend/observation_detail.html
@@ -17,7 +17,7 @@
     {% if metadata %}
 
     <div class="container row">
-        <h3>Observation Details</h3>
+        <h3 class="fw-light mb-5">Observation Details</h3>
 
         <div class="mb-5 col-6" style="position: relative; overflow: hidden">
             {% if data_cube.video_preview or data_cube.previews %}
@@ -151,7 +151,7 @@
         {% endif %}
     </div>
 
-    <div class="container">
+    <div class="container mb-5">
         <div class="accordion" id="metadata-accordion">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
