--- a/frontend/templates/account/verification_sent.html
+++ b/frontend/templates/account/verification_sent.html
@@ -1,7 +1,7 @@
 {% extends "frontend/base.html" %}
 
 {% block full_width_content %}
-<div class="container col-6">
+<div class="container col-5 mt-5 mb-5">
 
     <h2>Please Verify Your E-mail Address</h2>
 
