--- a/frontend/templates/frontend/account_profile.html
+++ b/frontend/templates/frontend/account_profile.html
@@ -3,11 +3,11 @@
 {% load account %}
 
 {% block full_width_content %}
-<div class="container col-6">
+<div class="container col-5 mt-5">
 
     <h2>Account Profile for {% user_display user %}</h2>
 
-    <div class="container mt-5 min-vh-100">
+    <div class="container mt-5">
 
         <table class="table table-borderless">
             <tr>
