--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load account %}
 
 <!doctype html>
 <html lang="en">
@@ -26,71 +25,36 @@
 </head>
 
 <body>
-<div id="main-container" class="container-fluid">
+<div id="main-container" class="container-fluid p-0">
+    <div class="row min-vh-100 justify-content-center" style="flex-flow: column">
 
-    <header class="row mb-5 bg-dark text-white">
-        <div class="container">
-        <div class="row justify-content-between py-3">
-            <h1 class="col-8 mt-3 display-4 fs-1 fw-lighter">
-                <a class="text-decoration-none text-white" href="{% url 'search' %}">Stockholm SST
-                Archive <span class="text-muted fw-light"><sup><small>&alpha;lpha</small></sup></span></a>
-            </h1>
+        <header class="row bg-dark text-white">
+            {% include "frontend/header.html" %}
+        </header>
 
-            {% if user.is_authenticated %}
-            <div class="col-3 text-end">
-                <div class="row">
-                    <strong class="col"><a href="{% url 'account_profile' %}">{% user_display user %}</a></strong>
+        <div class="row flex-fill">
+            {% block full_width_content %}
+            <div class="container">
+                <div class="row gx-5">
+                    <div id="sidebar" class="col-3 bg-light p-4 border-end mw-25 py-5">
+                        {% block sidebar %}
+                        {% include "frontend/search_sidebar.html" %}
+                        {% endblock %}
+                    </div>
 
-                    <p class="col">
-                    {% if user.is_staff %}
-                        <a class="btn btn-light btn-sm" href="{% url 'admin:index' %}"><i class="bi bi-pen-fill"></i> Admin</a>
-                    {% endif %}
-                        <a class="btn btn-light btn-sm" href="{% url 'account_logout' %}"><i class="bi bi-person-fill"></i> Sign out</a>
-                    </p>
+                    <div id="content" class="col-9 ml-5 offset-0 my-5">
+                        {% block content %}{% endblock %}
+                    </div>
                 </div>
             </div>
-            {% else %}
-            <div class="col-4 text-end">
-                <small>
-                    <a class="btn btn-light btn-sm" href="{% url 'account_login' %}?next={{ request.get_full_path|urlencode }}"><i class="bi bi-person-fill"></i> Sign in</a>
-                    <a class="btn btn-light btn-sm" href="{% url 'account_signup' %}"><i class="bi bi-pen-fill"></i> Sign up</a>
-                </small>
-            </div>
-            {% endif %}
+            {% endblock %}
         </div>
-            </div>
-    </header>
 
-    {% block full_width_content %}
-    <div class="container">
-        <div class="row">
-            <div id="sidebar" class="col-3 bg-light p-3 border">
-                {% block sidebar %}
-                {% include "frontend/search_sidebar.html" %}
-                {% comment %}
-                {% include "frontend/feedback_sidebar.html" %}
-                {% endcomment %}
-                {% endblock %}
-            </div>
+        <footer class="row bg-dark text-white">
+            {% include "frontend/footer.html" %}
+        </footer>
 
-            <div id="content" class="col-9 ml-5 offset-0">
-                {% block content %}{% endblock %}
-            </div>
-        </div>
     </div>
-    {% endblock %}
-
-    <footer class="row mt-5 bg-dark text-white">
-        <div class="col-2 m-3">
-            <h4 class="fw-light py-5">Feedback</h4>
-
-            <p>Have opinions or suggestions about the Stockholm SST Archive?</p>
-
-            <p>Feel free to reach out with your feedback to
-                <a href="mailto:daniel.nitshe@astro.su.se?subject=Stockholm SST Archive - Feedback">daniel.nitsche@astro.su.se</a>.
-            </p>
-        </div>
-    </footer>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
