--- a/frontend/templates/frontend/pagination_controls.html
+++ b/frontend/templates/frontend/pagination_controls.html
@@ -4,7 +4,7 @@
 <nav aria-label="Page navigation">
   <ul class="pagination">
       {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" href="?{% replace_query_param request 'page' page_obj.previous_page_number %}">Previous</a></li>
+        <li class="page-item"><a class="page-link" title="Previous page" href="?{% replace_query_param request 'page' page_obj.previous_page_number %}"><i class="bi bi-arrow-left"></i></a></li>
       {% endif %}
 
       {% for i in paginator.page_range %}
@@ -16,7 +16,7 @@
       {% endfor %}
 
       {% if page_obj.has_next %}
-        <li class="page-item"><a class="page-link" href="?{% replace_query_param request 'page' page_obj.next_page_number %}">Next</a></li>
+        <li class="page-item"><a class="page-link" title="Next page" href="?{% replace_query_param request 'page' page_obj.next_page_number %}"><i class="bi bi-arrow-right"></i></a></li>
       {% endif %}
   </ul>
 </nav>
