--- a/frontend/templates/frontend/search_sidebar.html
+++ b/frontend/templates/frontend/search_sidebar.html
@@ -1,5 +1,5 @@
-<div class="search-sidebar row mb-3">
-    <h4>Search</h4>
+<div class="search-sidebar row mb-3 mx-3">
+    <h4 class="fw-light mb-5">Search</h4>
 
     <form action="{% url 'search' %}" method="GET">
 
@@ -8,7 +8,7 @@
             <tr>
                 <td></td>
                 <td class="text-end">
-                <button type="submit" class="btn btn-secondary mt-3"><i class="bi bi-search "></i> Search</button>
+                <button type="submit" class="btn btn-secondary mt-3 btn-lg"><i class="bi bi-search "></i> Search</button>
                 </td>
             </tr>
         </table>
