Tweak heading margins

--- a/data_access/templates/data_access/access_denied.html
+++ b/data_access/templates/data_access/access_denied.html
@@ -4,7 +4,7 @@
 
 {% block full_width_content %}
 
-<div class="container col-6">
+<div class="container col-5 mt-5 mb-5">
 
 <h2>Content is restricted</h2>
 
