--- a/frontend/templates/account/login.html
+++ b/frontend/templates/account/login.html
@@ -5,7 +5,7 @@
 
     <h2>Sign in</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
         {% if request.GET.login_reason %}
         <div class="alert alert-primary">
             {{ request.GET.login_reason }}
