--- a/frontend/templates/account/password_change.html
+++ b/frontend/templates/account/password_change.html
@@ -5,7 +5,7 @@
 
     <h2>Change Password</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
         <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
 
             <table class="table table-borderless">
