--- a/frontend/templates/account/signup.html
+++ b/frontend/templates/account/signup.html
@@ -5,7 +5,7 @@
 
     <h2>Sign Up</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
 
         <p>Already have an account? Then please <a href="{{ login_url }}">sign in</a>.</p>
 
