--- a/frontend/templates/account/password_reset_done.html
+++ b/frontend/templates/account/password_reset_done.html
@@ -6,7 +6,7 @@
 <div class="container col-5 mt-5 mb-5">
     <h1>Password Reset</h1>
 
-    <div class="container mt-5">
+    <div class="mt-5">
         {% if user.is_authenticated %}
         {% include "account/snippets/already_logged_in.html" %}
         {% endif %}
