--- a/frontend/templates/account/password_reset_from_key.html
+++ b/frontend/templates/account/password_reset_from_key.html
@@ -5,7 +5,7 @@
 
     <h2>{% if token_fail %}Bad Token{% else %}Change Password{% endif %}</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
         <p>The password reset link was invalid, possibly because it has already been used.
