--- a/frontend/templates/account/password_reset_from_key_done.html
+++ b/frontend/templates/account/password_reset_from_key_done.html
@@ -5,7 +5,7 @@
 
     <h2>Change Password</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
         <p>Your password is now changed.</p>
     </div>
 </div>
