--- a/frontend/templates/account/password_set.html
+++ b/frontend/templates/account/password_set.html
@@ -5,7 +5,7 @@
 
     <h2>Set Password</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
 
         <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
             {% csrf_token %}
