--- a/frontend/templates/account/verification_sent.html
+++ b/frontend/templates/account/verification_sent.html
@@ -5,7 +5,7 @@
 
     <h2>Please Verify Your E-mail Address</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
 
         <p>We recurrently verify email accounts to ensure that new users have a working email address and that
             existing users are still active.</p>
