--- a/frontend/templates/frontend/search_sidebar.html
+++ b/frontend/templates/frontend/search_sidebar.html
@@ -8,7 +8,7 @@
             <tr>
                 <td></td>
                 <td class="text-end">
-                <button type="submit" class="btn btn-secondary mt-3 btn-lg"><i class="bi bi-search "></i> Search</button>
+                <button type="submit" class="btn btn-secondary mt-3"><i class="bi bi-search "></i> Search</button>
                 </td>
             </tr>
         </table>
