--- a/frontend/templates/frontend/landing_page.html
+++ b/frontend/templates/frontend/landing_page.html
@@ -3,7 +3,7 @@
 {% block full_width_content %}
 
 
-<div class="container pb-5 col-6 align-self-center text-center">
+<div class="container col-6 align-self-center text-center border p-5 bg-white rounded">
     <h1 class="mt-5 mb-5">Welcome to the Stockholm SST Archive</h1>
 
     <p class="mt-5 mb-5">&mdash; a searchable database of observational data gathered using the Swedish 1-m Solar
