--- a/frontend/templates/frontend/account_profile.html
+++ b/frontend/templates/frontend/account_profile.html
@@ -7,7 +7,7 @@
 
     <h2>Account Profile for {% user_display user %}</h2>
 
-    <div class="container mt-5">
+    <div class="mt-5">
 
         <table class="table table-borderless">
             <tr>
